WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211555
[GTK] REGRESSION(
r260996
): Pressing <Tab> in an HTTP authentication dialog makes the dialog lose focus
https://bugs.webkit.org/show_bug.cgi?id=211555
Summary
[GTK] REGRESSION(r260996): Pressing <Tab> in an HTTP authentication dialog ma...
Adrian Perez
Reported
2020-05-07 01:21:09 PDT
This can be reproduced easily: 1. Navigate to
https://webmail.igalia.com
2. The HTTP authentication dialog will show up, with the “Username” field focused. 3. Press <Tab>. Expected outcome: The “Pasword” field gets the focus, pressing <Tab> more time focuses the dialog buttons and then the dialog input fields again. Actual outcom: The HTTP authentication dialog loses the focus, if one keeps pressing <Tab> the dialog does not seem to ever get the focus back. Interacting with the dialog using the mouse is still possible, though.
Attachments
Patch
(2.09 KB, patch)
2020-05-07 06:24 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2020-05-07 01:22:15 PDT
Possible related to the changes introduced with
bug #211283
Carlos Garcia Campos
Comment 2
2020-05-07 06:22:59 PDT
Yes, I made the focus vfunc GTK4 only by mistake
Carlos Garcia Campos
Comment 3
2020-05-07 06:24:30 PDT
Created
attachment 398729
[details]
Patch
EWS Watchlist
Comment 4
2020-05-07 06:25:16 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Adrian Perez
Comment 5
2020-05-07 06:34:16 PDT
(In reply to Carlos Garcia Campos from
comment #3
)
> Created
attachment 398729
[details]
> Patch
Nice 🤩️
EWS
Comment 6
2020-05-07 07:26:17 PDT
Committed
r261284
: <
https://trac.webkit.org/changeset/261284
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398729
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug