[GTK] REGRESSION(r260996): Pressing <Tab> in an HTTP authentication dialog makes the dialog lose focus https://bugs.webkit.org/show_bug.cgi?id=211555

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2020-05-07
Reviewed by Philippe Normand.

Bring back webkitWebViewBaseFocus to GTK3. I made it GTK4 only by mistake in r260996.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseFocus):
(webkit_web_view_base_class_init):

Canonical link: https://commits.webkit.org/224457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261284 268f45cc-cd09-0410-ab3c-d52691b4dbfc